--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,9 @@ body {
 header, footer {
     background-color: #bcfc9f;
     color: white;
-    width: 100%;
+    width: 90%;
     padding: 3rem;
     text-align: center;
-    z-index: -998;
 }
 
 footer {
@@ -27,7 +26,8 @@ footer {
 }
 
 header img {
-    width: 500px;
+    width: 70%;
+    max-width: 500px;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -42,7 +42,7 @@ h1 {
 
 main {
     flex: 1;
-    width: 100%;
+    width: 90%;
     padding: 3rem;
     box-shadow: 0 -5px 20px 20px rgb(238, 255, 1);
     background-color: white;
@@ -50,7 +50,6 @@ main {
 }
 
 .container {
-    min-height: 100vh;
     max-width: 800px;
 }
 
